[workspace]
resolver = "2"
members = [
	"volatus",
	"test-client",
]

[workspace.dependencies]
axum = "0.6.20"
oauth2 = "4.4.2"
openidconnect = "3.3.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.2"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
serde = "1"
serde_json = "1.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
