[package]
name = "volatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
