[package]
name = "volatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_plain = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
rand = { workspace = true }

# crypto stuff
pem-rfc7468 = { workspace = true }
rsa = { workspace = true }
pkcs8 = { workspace = true }
pkcs1 = { workspace = true }
rand_chacha = { workspace = true }
sha2 = { workspace = true }
dyn-clone = { workspace = true }
